# dfmessages

./: CMakeLists.txt
cmake/: dfmessagesConfig.cmake.in
docs/: README.md  dune_dataflow_messages.dia
include/dfmessages/: BufferToken.hpp  Common.hpp  ComponentRequest.hpp  ComponentRequest_serialization.hpp  DataRequest.hpp  Fragment_serialization.hpp  GeoID.hpp  GeoID_serialization.hpp  HSIEvent.hpp  SourceID_serialization.hpp  TRMonRequest.hpp  TimeSync.hpp  TriggerComplete.hpp  TriggerDecision.hpp  TriggerDecisionToken.hpp  TriggerInhibit.hpp  TriggerRecordHeader_serialization.hpp  TriggerRecord_serialization.hpp  Types.hpp
plugins/: DataRequestNQ.cpp  FragmentNQ.cpp  HSIEventNQ.cpp  TRMonRequestNQ.cpp  TimeSyncNQ.cpp  TriggerDecisionNQ.cpp  TriggerDecisionTokenNQ.cpp  TriggerInhibitNQ.cpp
schema/dfmessages/: request_modes.jsonnet  requesttypes.jsonnet
src/: Serialization.cpp
unittest/: BufferToken_test.cxx  ComponentRequest_serialization_test.cxx  DataRequest_test.cxx  Fragment_serialization_test.cxx  HSIEvent_test.cxx  TRMonRequest_test.cxx  TimeSync_test.cxx  TriggerDecisionToken_test.cxx  TriggerDecision_test.cxx  TriggerInhibit_test.cxx  TriggerRecordHeader_serialization_test.cxx  TriggerRecord_serialization_test.cxx
